# tinify.rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: client.rs  shrink.rs
src/: data.rs  lib.rs  serde_url.rs
